feat: crud de métodos de pagamento
